--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ env:
 
 before_install:
   - export LD_LIBRARY_PATH=./htslib/
-  - export PATH="$TRAVIS_BUILD_DIR/nim-$BRANCH/bin:$PATH"
+  - export PATH="$TRAVIS_BUILD_DIR:$TRAVIS_BUILD_DIR/nim-$BRANCH/bin:$PATH"
   - export NIM_LIB_PREFIX=$TRAVIS_BUILD_DIR/nim-$BRANCH/
 
 install:
   - bash ./scripts/install.sh
 
 script: 
-  - nim c -d:release --cc:$CC sk.nim
+  - nim c -d:release --cc:$CC sc.nim
   - bash ./scripts/functional-tests.sh
 branches:
   except:
