--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - export NIM_LIB_PREFIX=$TRAVIS_BUILD_DIR/nim-$BRANCH/
 
 install:
-  - apt-get install -y jq
   - bash ./scripts/install.sh
+  - sudo apt-get install -y jq
 
 script: 
   - nim c -d:release --cc:$CC sc.nim
