--- a/nim.cfg
+++ b/nim.cfg
@@ -1,5 +1,5 @@
 # in htslib: ./configure --with-libdeflate --disable-libcurl
-# nim c -a -d:static -d:release mosdepth.nim
+# nim c -a -d:static -d:release sc.nim
 @if static:
   passC:"-static"
   passl:"-static"
