add opts to cfg.

--- a/nim.cfg
+++ b/nim.cfg
@@ -13,3 +13,7 @@
   dynlibOverride:"bz2"
   dynlibOverride:"pthread"
 @end
+-d:useLibzipSrc
+-d:noUndefinedBitOpts
+--cincludes:"src/c"
+--clibdir:"src/c"
