rm binary from release; add threads

--- a/nim.cfg
+++ b/nim.cfg
@@ -3,7 +3,6 @@
 @if static:
   passC:"-static"
   passl:"-static"
-
   passl:"/usr/lib/x86_64-linux-gnu/liblzma.a"
   passl:"/usr/lib/x86_64-linux-gnu/libz.a"
   passl:"-lbz2"
@@ -15,3 +14,5 @@
 @end
 -d:useLibzipSrc
 -d:noUndefinedBitOpts
+-d:release
+--threads:on
