--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - export CHOOSENIM_CHOOSE_VERSION=1.0.6
 
 install:
+  - export CHOOSENIM_CHOOSE_VERSION=1.0.6
   - curl https://nim-lang.org/choosenim/init.sh -sSf | sh
   - sudo apt-get install -y jq
 
