--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
   - export CHOOSENIM_CHOOSE_VERSION=1.0.6
 
 install:
-  - export CHOOSENIM_CHOOSE_VERSION=1.0.6
-  - curl https://nim-lang.org/choosenim/init.sh -sSf | sh
+  - curl https://nim-lang.org/choosenim/init.sh -sSf > init.sh
+  - bash init.sh -y
   - sudo apt-get install -y jq
 
 script: 
