--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
         cd htslib && git checkout 1.10 && autoheader && autoconf && ./configure --enable-libcurl
         cd
         make -j 4 -C htslib
-        echo "::set-env LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${HOME}/htslib"
+        echo "::set-env name=LD_LIBRARY_PATH::${LD_LIBRARY_PATH}:${HOME}/htslib"
         ls -lh $HOME/htslib/*.so
 
     - name: Install hstlib (macos)
