add docs branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-nimcache/
+book
 .DS_Store
-*.pyc
-.vscode/
-tut
-ssshtest
-.Rhistory
-.python-version
-bam_set/
-*.csi
-*.tbi
-sc
-benchmarks/*
-illumina_instrument.py
 .envrc
-vcf2phylip/*
+.vscode/*
